# junia-2024

./: CMakeLists.txt
.github/workflows/: updateDocumentation.yml
src/walle-app/: main.cpp
src/walle-lib/: chargingStation.cpp  chargingStation.hpp  diggingRobot.cpp  diggingRobot.hpp  element.cpp  element.hpp  environnement.cpp  environnement.hpp  environnementLogger.cpp  environnementLogger.hpp  hole.cpp  hole.hpp  plantingRobot.cpp  plantingRobot.hpp  robot.cpp  robot.hpp  tree.cpp  tree.hpp  vector2.hpp  wateringRobot.cpp  wateringRobot.hpp
tests/: visu.py
tests/src/: test_chargingStation.cpp  test_diggingRobot.cpp  test_element.cpp  test_environnement.cpp  test_hole.cpp  test_plantingRobot.cpp  test_robot.cpp  test_tree.cpp  test_vector2.cpp  test_wateringRobot.cpp
